--- a/src/assets/styles/mixins/parts/_font-face.sass
+++ b/src/assets/styles/mixins/parts/_font-face.sass
@@ -1,7 +1,7 @@
 @mixin font-face($font_name, $file_name, $weight, $style)
   @font-face
     font-family: '#{$font_name}'
-    src: local('#{$font_name}'), url("~@/assets/fonts/#{$file_name}.woff2") format("woff2"), url("~@/assets/fonts/#{$file_name}.woff") format("woff")
+    src: local('#{$font_name}'), url("@/assets/fonts/#{$file_name}.woff2") format("woff2"), url("@/assets/fonts/#{$file_name}.woff") format("woff")
     font-weight: #{$weight}
     font-style: #{$style}
     font-display: swap
