--- a/src/assets/styles/mixins/parts/_fonts.sass
+++ b/src/assets/styles/mixins/parts/_fonts.sass
@@ -1,16 +1,8 @@
-@include font-face("OpenSans", "OpenSans-Bold", "700", "normal")
-@include font-face("OpenSans", "OpenSans-BoldItalic", "700", "italic")
-@include font-face("OpenSans", "OpenSans-ExtraBoldItalic", "800", "italic")
-@include font-face("OpenSans", "OpenSans-ExtraBold", "800", "normal")
-//@include font-face("OpenSans", "OpenSans-Italic", "300", "italic");
-@include font-face("OpenSans", "OpenSans-Light", "300", "normal")
-@include font-face("OpenSans", "OpenSans-LightItalic", "300", "italic")
-@include font-face("OpenSans", "OpenSans-Regular", "400", "normal")
-@include font-face("OpenSans", "OpenSans-Semibold", "600", "normal")
-@include font-face("OpenSans", "OpenSans-SemiboldItalic", "600", "italic")
-@include font-face("RobotoCondensed", "RobotoCondensed-BoldItalic", "700", "italic")
-//@include font-face("RobotoCondensed", "RobotoCondensed-Italic", "400", "normal")
-@include font-face("RobotoCondensed", "RobotoCondensed-Light", "300", "normal")
-@include font-face("RobotoCondensed", "RobotoCondensed-Bold", "700", "normal")
-@include font-face("RobotoCondensed", "RobotoCondensed-Regular", "400", "normal")
-@include font-face("RobotoCondensed", "RobotoCondensed-LightItalic", "300", "italic")
+@include font-face("Lato", "Lato-Regular", "400", "normal")
+@include font-face("Lato", "Lato-Medium", "500", "normal")
+@include font-face("Lato", "Lato-Semibold", "600", "normal")
+@include font-face("Lato", "Lato-Bold", "700", "normal")
+
+@include font-face("Rubik", "Rubik-Regular", "400", "normal")
+@include font-face("Rubik", "Rubik-Medium", "500", "normal")
+@include font-face("Rubik", "Rubik-Bold", "700", "normal")
