--- a/src/assets/styles/mixins/parts/_fonts.sass
+++ b/src/assets/styles/mixins/parts/_fonts.sass
@@ -1,8 +1,17 @@
-@include font-face("Lato", "Lato-Regular", "400", "normal")
-@include font-face("Lato", "Lato-Medium", "500", "normal")
-@include font-face("Lato", "Lato-Semibold", "600", "normal")
-@include font-face("Lato", "Lato-Bold", "700", "normal")
+@mixin _font-face($font_name, $file_name, $weight, $style)
+  @font-face
+    font-family: '#{$font_name}'
+    src: local('#{$font_name}'), url("@/assets/fonts/#{$file_name}.woff2") format("woff2"), url("@/assets/fonts/#{$file_name}.woff") format("woff")
+    font-weight: #{$weight}
+    font-style: #{$style}
+    font-display: swap
 
-@include font-face("Rubik", "Rubik-Regular", "400", "normal")
-@include font-face("Rubik", "Rubik-Medium", "500", "normal")
-@include font-face("Rubik", "Rubik-Bold", "700", "normal")
+
+@include _font-face("Lato", "Lato-Regular", "400", "normal")
+@include _font-face("Lato", "Lato-Medium", "500", "normal")
+@include _font-face("Lato", "Lato-Semibold", "600", "normal")
+@include _font-face("Lato", "Lato-Bold", "700", "normal")
+
+@include _font-face("Rubik", "Rubik-Regular", "400", "normal")
+@include _font-face("Rubik", "Rubik-Medium", "500", "normal")
+@include _font-face("Rubik", "Rubik-Bold", "700", "normal")
