--- a/src/assets/styles/mixins/parts/_container.sass
+++ b/src/assets/styles/mixins/parts/_container.sass
@@ -1,4 +1,4 @@
-@mixin container($max-width, $width)
+@mixin _container($max-width, $width)
   @media (max-width: $max-width)
     .container
       width: $width
@@ -7,9 +7,9 @@
   width: 1170px
   margin: 0 auto
 
-@include container(1200px, 960px)
-@include container(992px, 720px)
-@include container(768px, 540px)
-@include container(576px, 420px)
-@include container(450px, 290px)
-@include container(320px, 290px)
+@include _container(1200px, 960px)
+@include _container(992px, 720px)
+@include _container(768px, 540px)
+@include _container(576px, 420px)
+@include _container(450px, 290px)
+@include _container(320px, 290px)
