bug: Fix font import.

--- a/src/assets/styles/global/parts/_variables.scss
+++ b/src/assets/styles/global/parts/_variables.scss
@@ -1,5 +1,5 @@
-  :root {
-    --font: 'Lato';
+:root {
+    --font: 'OpenSans';
     --text-color: #393939;
 
     --color-primary: #00b5ee;
@@ -8,4 +8,4 @@
 
     --product-color: #000000;
     --min-card-height: 0px;
-  }
+}
