--- a/src/assets/styles/mixins/parts/_fonts.sass
+++ b/src/assets/styles/mixins/parts/_fonts.sass
@@ -7,11 +7,11 @@
     font-display: swap
 
 
-@include _font-face("Lato", "Lato-Regular", "400", "normal")
-@include _font-face("Lato", "Lato-Medium", "500", "normal")
-@include _font-face("Lato", "Lato-Semibold", "600", "normal")
-@include _font-face("Lato", "Lato-Bold", "700", "normal")
+@include _font-face("OpenSans", "OpenSans-Light", "300", "normal")
+@include _font-face("OpenSans", "OpenSans-Regular", "400", "normal")
+@include _font-face("OpenSans", "OpenSans-Semibold", "600", "normal")
+@include _font-face("OpenSans", "OpenSans-Bold", "700", "normal")
 
-@include _font-face("Rubik", "Rubik-Regular", "400", "normal")
-@include _font-face("Rubik", "Rubik-Medium", "500", "normal")
-@include _font-face("Rubik", "Rubik-Bold", "700", "normal")
+@include _font-face("RobotoCondensed", "RobotoCondensed-Light", "300", "normal")
+@include _font-face("RobotoCondensed", "RobotoCondensed-Regular", "400", "normal")
+@include _font-face("RobotoCondensed", "RobotoCondensed-Bold", "700", "normal")
