feat: Add Purchase component.

--- a/src/assets/styles/global/parts/_variables.scss
+++ b/src/assets/styles/global/parts/_variables.scss
@@ -5,6 +5,7 @@
     --color-primary: #00b5ee;
     --color-secondary: #95dbf1;
     --color-pagination: #cecece;
+    --color-notification: #f44336;
 
     --min-card-height: 0px;
 }
