fix[Paper]: Add new styles.

--- a/src/components/Paper/Paper.module.sass
+++ b/src/components/Paper/Paper.module.sass
@@ -10,3 +10,8 @@
 .paper[data-hover="true"]:hover
   @media (min-width: 993px)
     box-shadow: 0 2px 16px 5px rgba(0, 0, 0, 0.12)
+
+
+@media (max-width: 450px)
+  .paper
+    width: 100%
