--- a/src/components/Icons/components/LoadingIcon/LoadingIcon.module.sass
+++ b/src/components/Icons/components/LoadingIcon/LoadingIcon.module.sass
@@ -6,7 +6,7 @@ $fill: var(--color-primary)
   display: block
   width: 2em
   height: 4em
-  margin: 10em auto
+  //margin: 10em auto
   background-color: $bg
   animation: hourglass 1s linear infinite
 
