refactor: Fix css variable names.

--- a/src/assets/styles/global/parts/components/_toggles.sass
+++ b/src/assets/styles/global/parts/components/_toggles.sass
@@ -5,7 +5,7 @@
 
   input[data-custom-checkbox='true'],
   input[data-custom-radio='true']
-    --active: var(--color-primary)
+    --active: var(--primary)
     --active-inner: #FFFFFF
     --focus: 2px rgba(39, 94, 254, .3)
     --border: #C1C1C1
