--- a/src/components/SocialNetworks/SocialNetworks.module.sass
+++ b/src/components/SocialNetworks/SocialNetworks.module.sass
@@ -15,7 +15,7 @@
   margin-bottom: 10px
   @include m.font(14px, 700)
   text-align: center
-  color: var(--text-color)
+  color: var(--color-text)
 
 
 .social-networks__list
