--- a/src/components/TextField/TextField.module.sass
+++ b/src/components/TextField/TextField.module.sass
@@ -8,21 +8,21 @@
 .input
   @include m.font(14px, 300)
   border: 1px solid #ffffff
-  color: var(--text-color)
+  color: var(--color-text)
 
   &:focus
-    border: 1px solid var(--color-primary)
+    border: 1px solid var(--primary)
     outline: none
 
 
 .textarea
   @include m.font(14px, 300)
   border: 1px solid #ffffff
-  color: var(--text-color)
+  color: var(--color-text)
   resize: none
 
   &:focus
-    border: 1px solid var(--color-primary)
+    border: 1px solid var(--primary)
     outline: none
 
   &::-webkit-scrollbar
