--- a/src/components/cards/PreviewCard/PreviewCard.module.sass
+++ b/src/components/cards/PreviewCard/PreviewCard.module.sass
@@ -22,7 +22,7 @@
   height: 210px
   margin: 10px auto 25px
   border-radius: 5px
-  background-color: var(--color-primary)
+  background-color: var(--primary)
   object-fit: cover
 
 .card__title
@@ -34,7 +34,7 @@
   margin-bottom: 20px
   @include m.font(13px, 400)
   text-align: center
-  color: var(--text-color)
+  color: var(--color-text)
 
 
 .card__product-buy
@@ -64,14 +64,14 @@
   align-items: center
   column-gap: 7px
   @include m.font(13px, 300)
-  color: var(--text-color)
+  color: var(--color-text)
 
   & img
     width: 16px
 
 .card__fast-buy
   @include m.font(13px, 600)
-  color: var(--color-primary)
+  color: var(--primary)
 
 
 @media (max-width: 1200px)
