--- a/src/components/cards/ProductCard/ProductCard.module.sass
+++ b/src/components/cards/ProductCard/ProductCard.module.sass
@@ -18,7 +18,7 @@
   max-width: 200px
   height: 200px
   border-radius: 5px
-  background-color: var(--color-primary)
+  background-color: var(--primary)
   object-fit: cover
 
 
@@ -81,7 +81,7 @@
       scale: 1.2
 
 .card-colors__item--selected
-  outline: 1px solid var(--color-primary)
+  outline: 1px solid var(--primary)
   outline-offset: 2px
 
 
