--- a/.storybook/styles.test.sass
+++ b/.storybook/styles.test.sass
@@ -12,9 +12,9 @@
 .t-text-field
   width: 350px
   padding: 20px
-  border: 1px solid var(--color-secondary) !important
+  border: 1px solid var(--secondary) !important
   &:focus
-    border-color: var(--color-primary) !important
+    border-color: var(--primary) !important
 
 input[class^="t-text-field"] + p
   right: 5px
