--- a/src/assets/styles/global/parts/_variables.scss
+++ b/src/assets/styles/global/parts/_variables.scss
@@ -1,11 +1,11 @@
 :root {
-    --font: 'OpenSans';
-    --text-color: #393939;
+    --primary: #00b5ee;
+    --secondary: #95dbf1;
 
-    --color-primary: #00b5ee;
-    --color-secondary: #95dbf1;
+    --font: 'OpenSans';
+
+    --color-text: #393939;
+
     --color-pagination: #cecece;
     --color-notification: #f44336;
-
-    --min-card-height: 0px;
 }
