--- a/src/components/Breadcrumbs/Breadcrumbs.module.sass
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.sass
@@ -24,7 +24,7 @@
       right: -16px
       bottom: 3px
       border: 5px solid transparent
-      border-left: 5px solid var(--text-color)
+      border-left: 5px solid var(--color-text)
 
     &:after
       right: -15px
