--- a/src/components/Checkbox/Checkbox.module.sass
+++ b/src/components/Checkbox/Checkbox.module.sass
@@ -29,4 +29,4 @@ input[data-custom-checkbox='true']
 .checkbox__text
   @include m.font(14px, 400)
   line-height: 1
-  color: var(--text-color)
+  color: var(--color-text)
