--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -31,7 +31,7 @@
   justify-content: space-between
   align-items: center
   padding: 20px 30px
-  background-color: var(--color-primary)
+  background-color: var(--primary)
 
 .modal-header__title
   @include m.font(16px, 700)
