--- a/src/components/Radio/Radio.module.sass
+++ b/src/components/Radio/Radio.module.sass
@@ -26,4 +26,4 @@ input[data-custom-radio='true']
 
 .radio__text
   @include m.font(14px, 400)
-  color: var(--text-color)
+  color: var(--color-text)
