--- a/src/assets/styles/global/_index.sass
+++ b/src/assets/styles/global/_index.sass
@@ -28,7 +28,7 @@ img
   max-width: 100%
 
 
-.visually-hidden
+%visually-hidden
   position: absolute
   width: 1px
   height: 1px
@@ -37,3 +37,6 @@ img
   border: 0
   clip: rect(0 0 0 0)
   overflow: hidden
+
+.visually-hidden
+  @extend %visually-hidden
