--- a/src/assets/styles/global/_index.sass
+++ b/src/assets/styles/global/_index.sass
@@ -1,6 +1,7 @@
 @forward "parts/variables"
 @forward "parts/normalize"
 @forward "parts/ui/scrollbar"
+@forward "parts/ui/section-title"
 @forward "parts/components/toggles"
 
 
