feat: Add sectional margin using CSS variable.

--- a/src/assets/styles/global/parts/_variables.scss
+++ b/src/assets/styles/global/parts/_variables.scss
@@ -1,11 +1,11 @@
 :root {
-    --primary: #00b5ee;
-    --secondary: #95dbf1;
-
     --font: 'OpenSans';
 
-    --color-text: #393939;
+    --sectional-margin: 35px;
 
+    --primary: #00b5ee;
+    --secondary: #95dbf1;
+    --color-text: #393939;
     --color-pagination: #cecece;
     --color-notification: #f44336;
 }
