--- a/src/layout/Footer/components/Advantages/Advantages.module.sass
+++ b/src/layout/Footer/components/Advantages/Advantages.module.sass
@@ -3,7 +3,7 @@
 
 
 body .advantages
-  margin-bottom: 55px
+  margin-bottom: var(--sectional-margin)
 
 .advantages
   border-top: 1px solid #a7e3f7
