--- a/src/layout/Preview/Preview.module.sass
+++ b/src/layout/Preview/Preview.module.sass
@@ -3,7 +3,7 @@
 
 
 main .preview
-  margin-bottom: 40px
+  margin-bottom: var(--sectional-margin)
 
 .preview__section-title
   @extend %visually-hidden
