--- a/src/layout/Subscription/Subscription.module.sass
+++ b/src/layout/Subscription/Subscription.module.sass
@@ -2,7 +2,7 @@
 
 
 main .subscription
-  margin-bottom: 55px
+  margin-bottom: var(--sectional-margin)
 
 .subscription__container
   padding: 42px 15px
