--- a/src/components/cards/shared/components/Price/Price.module.sass
+++ b/src/components/cards/shared/components/Price/Price.module.sass
@@ -21,3 +21,12 @@
 .price__new
   font-style: italic
   color: var(--color-notification)
+
+
+@media (max-width: 1200px)
+  .price
+    flex-direction: column
+
+@media (max-width: 768px)
+  .price
+    flex-direction: row
