--- a/src/components/Paper/Paper.module.sass
+++ b/src/components/Paper/Paper.module.sass
@@ -1,7 +1,7 @@
 .paper
   position: relative
-  width: max-content
-  height: max-content
+  width: 100%
+  height: 100%
   border-radius: 10px
   background-color: #ffffff
   box-shadow: 0 0 13px rgba(0, 0, 0, 0.12)
