fix[PreviewCard]: Fix Price component styles.

--- a/src/components/cards/PreviewCard/PreviewCard.module.sass
+++ b/src/components/cards/PreviewCard/PreviewCard.module.sass
@@ -77,12 +77,15 @@
 
 
 @media (max-width: 1200px)
-  .card__img
-    height: 175px
-
   .card__wrap
     padding-left: 15px
     padding-right: 15px
+
+  .card__img
+    height: 175px
+
+  .product-buy__price
+    flex-direction: column
 
   .card__footer
     flex-direction: column
@@ -95,6 +98,9 @@
 @media (max-width: 768px)
   .product-buy
     width: 210px
+
+  .product-buy__price
+    flex-direction: row
 
   .card__footer
     flex-direction: row
