feat[Purchase]: Add button disable logic for out of stock products.

--- a/src/assets/styles/global/parts/_variables.scss
+++ b/src/assets/styles/global/parts/_variables.scss
@@ -6,6 +6,6 @@
     --primary: #00b5ee;
     --secondary: #95dbf1;
     --color-text: #393939;
-    --color-pagination: #cecece;
+    --color-disabled: #cecece;
     --color-notification: #f44336;
 }
