--- a/src/components/cards/ProductCard/ProductCard.module.sass
+++ b/src/components/cards/ProductCard/ProductCard.module.sass
@@ -14,19 +14,21 @@
 
 
 .card__img
-  min-width: 200px
-  max-width: 200px
+  min-width: 160px
+  max-width: 160px
   height: 200px
+  margin-left: 10px
   border-radius: 5px
   background-color: var(--primary)
-  object-fit: cover
+  object-fit: fill
 
 
 .card__wrap
   display: grid
-  grid-auto-columns: auto
-  grid-auto-rows: auto
+  grid-auto-columns: 1fr auto
+  grid-auto-rows: min-content auto
   gap: 15px 30px
+  width: 100%
 
 
 .card-header
