fix[ProductCard]: Replace InStock block with icon.

--- a/src/components/cards/ProductCard/ProductCard.module.sass
+++ b/src/components/cards/ProductCard/ProductCard.module.sass
@@ -35,17 +35,12 @@
   display: flex
   align-items: center
   justify-content: space-between
+  column-gap: 15px
   grid-column: 1/2
   grid-row: 1/2
 
 .card-header__title
   @include m.font(16px, 600)
-
-.card-header__in-stock
-  --ls-color: #31c657
-
-  @include m.font(14px, 400)
-  color: var(--ls-color)
 
 
 .card__inner
