--- a/src/components/cards/ProductCard/ProductCard.module.sass
+++ b/src/components/cards/ProductCard/ProductCard.module.sass
@@ -69,6 +69,7 @@
 
   width: 16px
   height: 16px
+  border: 1px solid rgba(0, 0, 0, 0.15)
   border-radius: 50%
   background-color: var(--ls-color)
   transition: scale 200ms linear
