--- a/src/layout/ProductCatalog/ProductCatalog.module.sass
+++ b/src/layout/ProductCatalog/ProductCatalog.module.sass
@@ -31,8 +31,10 @@ main .product-catalog
   color: var(--color-text)
   pointer-events: none
 
-.product-catalog__sorting button
-  padding: 10px
+.product-catalog__sorting
+  width: 220px
+  & button
+    padding: 10px
 
 
 .product-catalog__wrap
