feat: Add new TextField component.

--- a/src/components/inputs/TextField/TextField.module.sass
+++ b/src/components/inputs/TextField/TextField.module.sass
@@ -7,7 +7,7 @@
 
 .input
   @include m.font(14px, 300)
-  border: 1px solid #ffffff
+  border: 1px solid var(--secondary)
   color: var(--color-text)
 
   &:focus
