feat[icons]: Add css icon (remove-icon).

--- a/src/assets/styles/global/_index.sass
+++ b/src/assets/styles/global/_index.sass
@@ -2,6 +2,7 @@
 @forward "parts/normalize"
 @forward "parts/ui/scrollbar"
 @forward "parts/ui/section-title"
+@forward "parts/ui/icons"
 @forward "parts/components/toggles"
 
 
