--- a/src/components/Search/Search.module.sass
+++ b/src/components/Search/Search.module.sass
@@ -3,7 +3,7 @@
 
 
 .search
-  --bg: #393939
+  --bg: var(--color-text)
 
   position: relative
   width: 400px
@@ -28,26 +28,9 @@
 
 
 .search__remove-btn
-  position: absolute
-  top: 50%
   right: 48px
   width: 14px
   height: 14px
-  transform: translateY(-50%)
-  opacity: 0.5
-  &:before, &:after
-    content: ''
-    position: absolute
-    display: block
-    top: 50%
-    left: 0
-    width: 100%
-    height: 2px
-    background-color: var(--bg)
-  &:before
-    transform: translateY(-50%) rotate(45deg)
-  &:after
-    transform: translateY(-50%) rotate(135deg)
 
 
 .search__btn
